// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  border-width: 0 0 1px 0;
  margin: 1em 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-1[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  margin: 0 1em;
  width: 0;
  height: auto;
}

.emotion-0.emotion-0 {
  margin: 0.5rem 0;
}

.emotion-3 {
  color: #3722ed !important;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 emotion-3 test fp-Box fp-Divider fp-DropdownMenuDivider"
  role="separator"
/>
`;

exports[`overrides DropdownMenu.Divider.css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  border-width: 0 0 1px 0;
  margin: 1em 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-1[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  margin: 0 1em;
  width: 0;
  height: auto;
}

.emotion-0.emotion-0 {
  margin: 0.5rem 0;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Divider fp-DropdownMenuDivider"
  role="separator"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  border-width: 0 0 1px 0;
  margin: 1em 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-1[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  margin: 0 1em;
  width: 0;
  height: auto;
}

.emotion-0.emotion-0 {
  margin: 0.5rem 0;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Divider fp-DropdownMenuDivider"
  role="separator"
/>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  border-width: 0 0 1px 0;
  margin: 1em 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-1[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  margin: 0 1em;
  width: 0;
  height: auto;
}

.emotion-0.emotion-0 {
  margin: 0.5rem 0;
}

.emotion-3 {
  background-color: red !important;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Divider fp-DropdownMenuDivider"
  role="separator"
/>
`;

exports[`theming DropdownMenu.Divider.css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  border-width: 0 0 1px 0;
  margin: 1em 0;
  padding: 0;
  width: auto;
  height: 0;
}

.emotion-1[aria-orientation="vertical"] {
  border-width: 0 1px 0 0;
  margin: 0 1em;
  width: 0;
  height: auto;
}

.emotion-0.emotion-0 {
  margin: 0.5rem 0;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-orientation="horizontal"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Divider fp-DropdownMenuDivider"
  role="separator"
/>
`;
